Fix: 편의시설이 있는 건물 조회를 건물 전체 조회 api와 통합, 특정 편의시설 목록 조회 API 추가